# OpenTraderWorld

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh
core/: .dockerignore  Cargo.toml  Dockerfile  rust-toolchain.toml
core/otw-core/: Cargo.toml
core/otw-core/src/: agent_api.rs  auth.rs  backtest_api.rs  calendar_api.rs  community_docs_api.rs  dashboard_api.rs  databases.rs  demo.rs  demo_seed.rs  documents.rs  feeds_api.rs  files.rs  findb_api.rs  findb_import.rs  fx.rs  fx_api.rs  fx_job.rs  goals_api.rs  histdata_api.rs  histdata_cipher.rs  histdata_job.rs  journal_api.rs  journal_report.rs  log_layer.rs  main.rs  mcp_api.rs  mindset_api.rs  mportfolios_api.rs  mportfolios_job.rs  network_api.rs  notif_channels_api.rs  notif_send.rs  portfolios_api.rs  prompts_api.rs  quant_api.rs  rate.rs  rate_api.rs  reminder_job.rs  reminders_api.rs  resources_api.rs  (+13 more)
core/otw-core/src/agent/: anthropic.rs  mcp_client.rs  mod.rs  openai_compat.rs  provider.rs  run.rs  sse.rs  summary.rs  tools.rs
core/otw-feeds/: Cargo.toml
core/otw-feeds/src/: json_path.rs  lib.rs
core/otw-i18n/: Cargo.toml
core/otw-i18n/src/: lib.rs
core/otw-modules/: Cargo.toml
core/otw-modules/src/: lib.rs
core/otw-queue/: Cargo.toml
core/otw-queue/src/: lib.rs
core/otw-runner/: Cargo.toml
core/otw-runner/src/: lib.rs
core/otw-scheduler/: Cargo.toml
core/otw-scheduler/src/: lib.rs
core/otw-store/: Cargo.toml
core/otw-store/migrations/: 0001_init.sql  0002_documents.sql  0003_databases.sql  0004_files.sql  0005_feeds.sql  0006_journal.sql  0007_journal_legs.sql  0008_journal_fees_currency.sql  0009_journal_fx.sql  0010_template_default_fee.sql  0011_subscriptions.sql  0012_time_tracker.sql  0013_wealth.sql  0014_todos.sql  0015_goals.sql  0016_reminders.sql  0017_todo_goal_category.sql  0018_time_of_day.sql  0019_findb.sql  0020_calendar.sql  0021_histdata.sql  0022_backtest.sql  0023_mportfolios.sql  0024_taxcalc.sql  0025_portfolios.sql  0026_resources.sql  0027_community_docs.sql  0028_settings_logs.sql  0029_document_layout.sql  0030_feed_dashboards.sql  0031_journal_category_description.sql  0032_mportfolio_snapshots.sql  0033_goals_position.sql  0034_community_docs_favorites.sql  0035_trader_tasks.sql  0036_mindset.sql  0037_portfolio_reconcile.sql  0038_community_docs_multi.sql  0039_notif_channels.sql  0040_api_rate.sql  (+21 more)
core/otw-store/src/: agent.rs  api_quota.rs  api_rate.rs  backtest.rs  calendar.rs  community_docs.rs  crypto.rs  data_admin.rs  databases.rs  documents.rs  feeds.rs  files.rs  findb.rs  goals.rs  histdata.rs  journal.rs  journal_fx.rs  lib.rs  logs.rs  mcp.rs  mindset.rs  mportfolios.rs  notif_channels.rs  portfolios.rs  prompts.rs  reminders.rs  resources.rs  search.rs  settings.rs  subscriptions.rs  taxcalc.rs  time_tracker.rs  todos.rs  trader_tasks.rs  vault.rs  watchlists.rs  wealth.rs  webhooks.rs
core/otw-theme/: Cargo.toml
core/otw-theme/src/: lib.rs
(+336 files in other folders)
