[workspace]
resolver = "2"
members = [
    "otw-core",
    "otw-scheduler",
    "otw-runner",
    "otw-modules",
    "otw-store",
    "otw-queue",
    "otw-i18n",
    "otw-theme",
    "otw-feeds",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
license = "FSL-1.1-MIT"
repository = "https://github.com/G-OTW/OpenTraderWorld"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
feed-rs = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "serde"] }
