[package]
name = "otw-feeds"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenTraderWorld: news-feed fetchers (RSS/Atom + generic JSON API)"

[dependencies]
otw-store = { path = "../otw-store" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
feed-rs.workspace = true
time.workspace = true
uuid.workspace = true
